--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ window.onload = function() {
 
 
   <!-- -------------------------ステートメント-------------------------ス -->
-  <!-- <div class="statement-wrapper section-fadein">
+  <div class="statement-wrapper section-fadein">
     <div class="statement-info-wrapper">
       <div class="white">
 
@@ -120,11 +120,11 @@ window.onload = function() {
       </div>
     </div>
 
-  </div> -->
+  </div>
 
 
   <!-- -------------------------アバウト --------------------------->
-  <!-- <div class="about-wrapper section-fadein">
+  <div class="about-wrapper section-fadein">
 
     <div class="white">
 
@@ -230,10 +230,10 @@ window.onload = function() {
 
 
     </div>
-  </div> --> -->
+  </div>
 
   <!-- イベント -->
-<!-- <div class="event-wrapper section-fadein">
+<div class="event-wrapper section-fadein">
     <div class="white">
       <h2 class="section-title">Event | イベント</h2>
 
@@ -244,12 +244,12 @@ window.onload = function() {
       </div>
 
     </div>
-  </div> -->
+  </div>
 
 
   <!-- ---------------------作家 ----------------------------->
 
-  <!-- <div class="exhibitors-wrapper section-fadein">
+  <div class="exhibitors-wrapper section-fadein">
 
     <div class="white">
       <h2 class="section-title">Exhibitors | 出展作家</h2>
@@ -261,6 +261,48 @@ window.onload = function() {
       <p class="section-description"></p>
       <div class="grades m2" id="M2">
 
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
 
         <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
           <div class="sumbnail">
@@ -286,14 +328,62 @@ window.onload = function() {
           </div>
         </div>
 
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
+        <div class="exhibitor-wrapper works_modal_open" data-modal-open="01_uchiumi">
+          <div class="sumbnail">
+            <img src="image/exhibitor-sumbnail/00_test.png">
+          </div>
+        </div>
+
 
     </div>
-  </div> -->
+  </div>
 
 
   <!-- モーダル -->
 
-  <!-- <div class="works_modal_wrapper" data-modal="01_uchiumi">
+  <div class="works_modal_wrapper" data-modal="01_uchiumi">
     <div class="works_modal_mask"></div>
     <div class="works_modal_window">
 
@@ -365,7 +455,7 @@ window.onload = function() {
       </div>
 
     </div>
-  </div> -->
+  </div>
 
 
 
@@ -373,7 +463,7 @@ window.onload = function() {
 
 
   <!-- フッター -->
-  <!-- <div class="footer-wrapper">
+  <div class="footer-wrapper">
     <div class="white">
       <div id="icons">
         <img src="image/design/twitter.png" id="twitter-button">
@@ -393,7 +483,7 @@ window.onload = function() {
       </p>
 
     </div>
-  </div> -->
+  </div>
 
 
 
