--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 <body>
 
   <!-- ローディング画面 -->
-<div id="loading-wrapper">
-  <div class="loader"></div>
-  <p>Loading...</p>
-</div>
+  <div id="loading-wrapper">
+    <div class="loader"></div>
+    <p>Loading...</p>
+  </div>
 
-<script type="text/javascript">
-window.onload = function() {
-  const loader = document.getElementById('loading-wrapper');
-  loader.classList.add('completed');
-}
-</script>
+  <script type="text/javascript">
+    window.onload = function() {
+      const loader = document.getElementById('loading-wrapper');
+      loader.classList.add('completed');
+    }
+  </script>
 
   <!-- 背景 -->
   <div class="background">
@@ -94,7 +94,7 @@ window.onload = function() {
   </div>
 
 
-  <!-- -------------------------ステートメント-------------------------ス -->
+  <!-- ステートメント -->
   <div class="statement-wrapper section-fadein">
     <div class="statement-info-wrapper">
       <div class="white">
@@ -102,8 +102,8 @@ window.onload = function() {
         <h2 class="statement-title">MEDIA PRACTICE 21-22 </h2>
 
         <h2 class="statement-title-min">
-            東京藝術大学大学院映像研究科メディア映像専攻 年次成果発表会 <br>
-            修士課程修了制作展／修士一年次成果発表
+          東京藝術大学大学院映像研究科メディア映像専攻 年次成果発表会 <br>
+          修士課程修了制作展／修士一年次成果発表
         </h2>
 
         <hr>
@@ -123,7 +123,7 @@ window.onload = function() {
   </div>
 
 
-  <!-- -------------------------アバウト --------------------------->
+  <!-- アバウト -->
   <div class="about-wrapper section-fadein">
 
     <div class="white">
@@ -233,7 +233,7 @@ window.onload = function() {
   </div>
 
   <!-- イベント -->
-<div class="event-wrapper section-fadein">
+  <div class="event-wrapper section-fadein">
     <div class="white">
       <h2 class="section-title">Event | イベント</h2>
 
@@ -247,7 +247,7 @@ window.onload = function() {
   </div>
 
 
-  <!-- ---------------------作家 ----------------------------->
+  <!-- 作家 -->
 
   <div class="exhibitors-wrapper section-fadein">
 
@@ -377,8 +377,11 @@ window.onload = function() {
         </div>
 
 
+      </div>
     </div>
+
   </div>
+
 
 
   <!-- モーダル -->
@@ -484,12 +487,6 @@ window.onload = function() {
 
     </div>
   </div>
-
-
-
-  <footer>
-
-  </footer>
 
 </body>
 
